Se quitan imagenes no usadas y se modifican clips

--- a/pages/clips.html
+++ b/pages/clips.html
@@ -54,8 +54,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="recuadro col-md-12 col-lg-6">
-                    <h3>Una destacada</h3>
-                    <p>Al finalizar la partida sale una jugada destacada, esta es una de ellas.</p>
+                    <h3>Remates</h3>
+                    <p>Sorprendiendo enemigos por la espalda.</p>
                     <video src="../assets/videos/remates.mp4" controls></video>
                 </div>
                 <div class="recuadro col-md-12 col-lg-6">
@@ -64,9 +64,9 @@
                     <video src="../assets/videos/esc_stake.mp4" controls></video>
                 </div>
                 <div class="recuadro col-md-12 col-lg-6">
-                    <h3>Un clasico</h3>
-                    <p>A continuación, un clásico jajaja uno de los compañeros parece que no sabe usar la escalera</p>
-                    <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@toysoldi3rez3/video/7253857796825828614" data-video-id="7253857796825828614" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@toysoldi3rez3" href="https://www.tiktok.com/@toysoldi3rez3?refer=embed">@toysoldi3rez3</a> Cuando no es tu día... jajaja <a title="cod" target="_blank" href="https://www.tiktok.com/tag/cod?refer=embed">#COD</a> <a title="codmw" target="_blank" href="https://www.tiktok.com/tag/codmw?refer=embed">#CODMW</a> <a target="_blank" title="♬ sonido original - ToySoldi3rEz3" href="https://www.tiktok.com/music/sonido-original-7253857799359236870?refer=embed">♬ sonido original - ToySoldi3rEz3</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+                    <h3>Un bailecito</h3>
+                    <p>Al finalizar la partida se muestra el top 3 del equipo ganador y se pueden hacer gestos.</p>
+                    <video src="../assets/videos/Baile-Termi-Fer-Toy.mp4" controls></video>
                 </div>
                 <div class="recuadro col-md-12 col-lg-6">
                     <h3>Un resumen gracioso de Warzone</h3>
