se corrige paleta de colores, se redondea el borde de las tarjetas y se agregan  imagenes en los articles

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p>Hay varias cosas que nos caracterizan, pero lo mas importante es la calidad de personas que conforman el grupo, la mayoria somos de Argentina, pero tambien hay amigos de Perú, Uruguay y Chile. Algunos nos conocemos personalmente y con otros aun tenemos eso pendiente. Como dice Nach en una de sus canciones "No mido mi exito por logros sino por valores, por eso estoy con los buenos, no con los mejores". Aqui no vas a encontrar a los jugadores "Top" del juego, pero te aseguramos que vas a disfrutar, divertirte, ganar alguna que otra partida y aprender al igual que nosotros. Sin mas que añadir te invitamos a descargar y probar tus habilidades, saludos.</p>
         </section>
         <section id="elJuego"><!--Info sobre COD-->
-            <h2>Sobre el juego</h2>
+            <h3>Sobre el juego</h3>
             <div>
                 <p>Call Of Duty es un juego de la categoria FPS ("First Person Sooter" o "Disparos en Primera Persona"). Cuenta con muchas sagas, su primer lanzamiento fue en el año 2003 y el más reciente es <em>Call of Duty: Black Ops 6</em> el cual puede ser jugado en PC y consolas (Xbox y Play Station 4 en adelante), las lobbys (salas) son compartidas asi que si vos usas PC y tu amigo Play Station, van a poder jugar juntos.</p>
                 <p>Por el momento nos vamos a enfocar solo en la version <em>Multijugador</em> (Multiplayer) que es nuestra preferida, ya que Warzone (este modo es gratuito) y Zombies tienen sus respectivas caracteristicas también.</p>
@@ -73,18 +73,22 @@
                 <div class="row">
                     <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
                         <h3>Warzone</h3>
+                        <img src="./assets/imagenes/wz.png" alt="">
                         <p>Este modo de juego es <em>GRATUITO</em> y consiste en ser la ultima persona o grupo sobrevivientes en un mapa donde el gas va reduciendo la zona segura, lo cual hace que si o si tengas que moverte y cruzarte con rivales hasta que solo queda 1 persona o equipo. Si bien en Play Station para poder jugarlo necesitas pagar la suscripción a PS Plus no es necesario comprar el juego. En PC solo necesitas descargarlo desde alguna de las plataformas nombradas anteriormente.</p>
                     </article>
                     <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
                         <h3>Campaña</h3>
+                        <img src="./assets/imagenes/camp.png" alt="">
                         <p>Al comprar el juego obtenemos la posibilidad de jugar la campaña que seria el <em>modo historia</em> de la saga, es de un solo jugador y se va guardando el progreso para continuarlo cuando gustes. Suelen ser muy atrapantes y se recomienda jugarlas porque podemos aprender mucho sobre las funciones y teclas asignadas para cada accion, luego si no las sentimos comodas configurarlo a nuestro gusto.</p>
                     </article>
                     <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
                         <h3>Zombies</h3>
+                        <img src="./assets/imagenes/zom.png" alt="">
                         <p>Este es otro modo que se adquiere al comprar el juego, en esta version debemos sobrevivir a hordas de zombies que con cada ronda se va poniendo mas dificil, se puede hacer en grupo o solitario (este puede guardarse), a medida que la partida avanza juntamos esencia y herramientas para mejorar nuestro personaje y armas hasta que decidamos llamar al helicoptero de rescate.</p>
                     </article>
                     <article class="recuadro col-12 col-md-6 col-lg-3"> <!--resumen de los distintos formatos de juego-->
                         <h3>Multijugador</h3>
+                        <img src="./assets/imagenes/multi.png" alt="">
                         <p>A este modo le dedicaremos esta pagina ya que es lo que jugamos. Aqui encontraras partidas normalmente de 6 contra 6 en varios mapas y amplia variedad de modos de juego, algunos mas frenéticos que otros pero todos suelen ser muy competitivos. También podrás editar tu perfil, operador, armamentos y más, ganaras experiencia con cada partida para subir de nivel e ir desbloqueando armas y accesorios que elegiras equipar segun tu estilo de juego.</p>
                     </article>
                 </div>
