Se agregan alts faltantes en index

--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
                 <div class="row">
                     <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
                         <h3>Warzone</h3>
-                        <img src="./assets/imagenes/wz.png" alt="">
+                        <img src="./assets/imagenes/wz.png" alt="imagen de acceso al modo warzone">
                         <p>Este modo de juego es <em>GRATUITO</em> y consiste en ser la ultima persona o grupo sobrevivientes en un mapa donde el gas va reduciendo la zona segura, lo cual hace que si o si tengas que moverte y cruzarte con rivales hasta que solo queda 1 persona o equipo. Si bien en Play Station para poder jugarlo necesitas pagar la suscripción a PS Plus no es necesario comprar el juego. En PC solo necesitas descargarlo desde alguna de las plataformas nombradas anteriormente.</p>
                     </article>
                     <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
                         <h3>Campaña</h3>
-                        <img src="./assets/imagenes/camp.png" alt="">
+                        <img src="./assets/imagenes/camp.png" alt="imagen de acceso al modo campaña">
                         <p>Al comprar el juego obtenemos la posibilidad de jugar la campaña que seria el <em>modo historia</em> de la saga, es de un solo jugador y se va guardando el progreso para continuarlo cuando gustes. Suelen ser muy atrapantes y se recomienda jugarlas porque podemos aprender mucho sobre las funciones y teclas asignadas para cada accion, luego si no las sentimos comodas configurarlo a nuestro gusto.</p>
                     </article>
                     <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
                         <h3>Zombies</h3>
-                        <img src="./assets/imagenes/zom.png" alt="">
+                        <img src="./assets/imagenes/zom.png" alt="imagen de acceso al modo zombies">
                         <p>Este es otro modo que se adquiere al comprar el juego, en esta version debemos sobrevivir a hordas de zombies que con cada ronda se va poniendo mas dificil, se puede hacer en grupo o solitario (este puede guardarse), a medida que la partida avanza juntamos esencia y herramientas para mejorar nuestro personaje y armas hasta que decidamos llamar al helicoptero de rescate.</p>
                     </article>
                     <article class="recuadro col-12 col-md-6 col-lg-3"> <!--resumen de los distintos formatos de juego-->
                         <h3>Multijugador</h3>
-                        <img src="./assets/imagenes/multi.png" alt="">
+                        <img src="./assets/imagenes/multi.png" alt="imagen de acceso al modo multijugador">
                         <p>A este modo le dedicaremos esta pagina ya que es lo que jugamos. Aqui encontraras partidas normalmente de 6 contra 6 en varios mapas y amplia variedad de modos de juego, algunos mas frenéticos que otros pero todos suelen ser muy competitivos. También podrás editar tu perfil, operador, armamentos y más, ganaras experiencia con cada partida para subir de nivel e ir desbloqueando armas y accesorios que elegiras equipar segun tu estilo de juego.</p>
                     </article>
                 </div>
