margen tarjetas, sombra imagenes, enlaces tipos de juego, agrego imagen en index, cambio tamaño de otras imagenes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <title>HADIR - Inicio</title> <!--Nombre de pestaña-->
 </head>
 <body>
-    <section id="inicio1"></section>
-    <header>
+    <header id="inicio1">
         <img src="./assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR"> <!--logo izquierda-->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -51,46 +50,66 @@
         <h1>Inicio</h1> <!--Titulo derecha-->        
     </header>
     <div>
-        <img src="./assets/imagenes/Logo_COD.jpeg" class="animate__animated animate__fadeIn" alt="Logo Call Of Duty y operador con remera del clan HADIR" id="logoCod"> <!--imagen presentacion-->
+        <img src="./assets/imagenes/Logo_COD.jpeg" class="logoCod animate__animated animate__fadeIn" alt="Logo Call Of Duty y operador con remera del clan HADIR"> <!--imagen presentacion-->
     </div>
     <main>
         <section id="bienvenidos">
             <h2>Bienvenidos</h2><!--Presentacion-->
-            <p>Hola, somos <em><strong>HADIR</strong></em>, un clan de <strong>Call Of Duty</strong>. La idea de esta pagina es para ayudarte a entender algunas cosas del juego asi que aquí encontraras información basica, tips, te contaremos un poco sobre nosotros, veras algunos clips y tal vez un camino a disfrutar de un gran juego junto a este grupo de amigos.</p><!-- primer parrafo -->
-            <h3>Nosotros</h3>
-            <p>Hace varios años que compartimos tardes y noches de juego siempre que podemos, por lo cual nuestro "TAG" es conocido por muchos otros jugadores y clanes a los cuales enfrentamos en las diferentes partidas. Hemos jugado Call Of Duty:MW (2019) / Warzone, COD:MW2 / Warzone 2, COD: MW3 y ahora COD: Black Ops 6 que es el juego al que le vamos a dedicar esta pagina.</p>
-            <p>Hay varias cosas que nos caracterizan, pero lo mas importante es la calidad de personas que conforman el grupo, la mayoria somos de Argentina, pero tambien hay amigos de Perú, Uruguay y Chile. Algunos nos conocemos personalmente y con otros aun tenemos eso pendiente. Como dice Nach en una de sus canciones "No mido mi exito por logros sino por valores, por eso estoy con los buenos, no con los mejores". Aqui no vas a encontrar a los jugadores "Top" del juego, pero te aseguramos que vas a disfrutar, divertirte, ganar alguna que otra partida y aprender al igual que nosotros. Sin mas que añadir te invitamos a descargar y probar tus habilidades, saludos.</p>
+            <p>Hola, somos <em><strong>HADIR</strong></em>, un clan de <strong>Call Of Duty</strong>. La idea de esta pagina es para ayudarte a entender algunas cosas del juego asi que aquí encontraras información basica, tips, te contaremos un poco sobre nosotros, veras algunos clips y tal vez un camino a disfrutar de un gran juego junto a este grupo de amigos.</p>
+            <div class="container-fluid text-center">
+                <div class="row g-2">
+                    <div class="col-12 col-lg-7 col-xl-4">
+                        <h3>Nosotros</h3>
+                        <p>Hace varios años que compartimos tardes y noches de juego siempre que podemos, por lo cual nuestro "TAG" es conocido por muchos otros jugadores y clanes a los cuales enfrentamos en las diferentes partidas. Hemos jugado Call Of Duty:MW (2019) / Warzone, COD:MW2 / Warzone 2, COD: MW3 y ahora COD: Black Ops 6 que es el juego al que le vamos a dedicar esta pagina.</p>
+                        <p>Hay varias cosas que nos caracterizan, pero lo mas importante es la calidad de personas que conforman el grupo, la mayoria somos de Argentina, pero tambien hay amigos de Perú, Uruguay y Chile. Algunos nos conocemos personalmente y con otros aun tenemos eso pendiente. Como dice Nach en una de sus canciones "No mido mi exito por logros sino por valores, por eso estoy con los buenos, no con los mejores". Aqui no vas a encontrar a los jugadores "Top" del juego, pero te aseguramos que vas a disfrutar, divertirte, ganar alguna que otra partida y aprender al igual que nosotros. Sin mas que añadir te invitamos a descargar y probar tus habilidades, saludos.</p>
+                    </div>
+                    <div class="col-12 col-lg-5 col-xl-4">
+                            <img src="./assets/imagenes/NuevoLogoHadir.jpeg" class="imgMenuHor" data-aos="fade-up" alt="Nuevo logo del clan HADIR, Call Of Duty, calavera, Hadir">
+                    </div>
+                    <div class="col-12 col-lg-12 col-xl-4">
+                        <h3>Sobre el juego</h3>
+                        <div>
+                            <p>Call Of Duty es un juego de la categoria FPS ("First Person Sooter" o "Disparos en Primera Persona"). Cuenta con muchas sagas, su primer lanzamiento fue en el año 2003 y el más reciente es <em>Call of Duty: Black Ops 6</em> el cual puede ser jugado en PC y consolas (Xbox y Play Station 4 en adelante), las lobbys (salas) son compartidas asi que si vos usas PC y tu amigo Play Station, van a poder jugar juntos.</p>
+                            <p>Por el momento nos vamos a enfocar solo en la version <em>Multijugador</em> (Multiplayer) que es nuestra preferida, ya que Warzone (este modo es gratuito) y Zombies tienen sus respectivas caracteristicas también.</p>
+                            <p>En Play Station aparte de comprar el juego debes pagar la suscripcion a <em>PS Plus</em></p>
+                            <p>En PC solo debes comprar el juego y listo. Podes comprarlo a traves de <em>Steam</em>, <em>Blizzard</em> o <em>Xbox App</em> que es la tienda de Microsoft. En esta última con suscribirte a <strong>Gamepass</strong> ya te habilita para jugar sin necesidad de comprar el juego base, es lo mas recomendable si preferis pagar una cuota baja mensualmente antes que gastar U$D 70 en un pago.</p>                
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="elJuego"><!--Info sobre COD-->
-            <h3>Sobre el juego</h3>
-            <div>
-                <p>Call Of Duty es un juego de la categoria FPS ("First Person Sooter" o "Disparos en Primera Persona"). Cuenta con muchas sagas, su primer lanzamiento fue en el año 2003 y el más reciente es <em>Call of Duty: Black Ops 6</em> el cual puede ser jugado en PC y consolas (Xbox y Play Station 4 en adelante), las lobbys (salas) son compartidas asi que si vos usas PC y tu amigo Play Station, van a poder jugar juntos.</p>
-                <p>Por el momento nos vamos a enfocar solo en la version <em>Multijugador</em> (Multiplayer) que es nuestra preferida, ya que Warzone (este modo es gratuito) y Zombies tienen sus respectivas caracteristicas también.</p>
-                <p>En Play Station aparte de comprar el juego debes pagar la suscripcion a <em>PS Plus</em></p>
-                <p>En PC solo debes comprar el juego y listo. Podes comprarlo a traves de <em>Steam</em>, <em>Blizzard</em> o <em>Xbox App</em> que es la tienda de Microsoft. En esta última con suscribirte a <strong>Gamepass</strong> ya te habilita para jugar sin necesidad de comprar el juego base, es lo mas recomendable si preferis pagar una cuota baja mensualmente antes que gastar U$D 70 en un pago.</p>                
-            </div>
-            <div class="container-fluid">
-                <div class="row">
-                    <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
-                        <h3>Warzone</h3>
-                        <img src="./assets/imagenes/wz.png" alt="imagen de acceso al modo warzone">
-                        <p>Este modo de juego es <em>GRATUITO</em> y consiste en ser la ultima persona o grupo sobrevivientes en un mapa donde el gas va reduciendo la zona segura, lo cual hace que si o si tengas que moverte y cruzarte con rivales hasta que solo queda 1 persona o equipo. Si bien en Play Station para poder jugarlo necesitas pagar la suscripción a PS Plus no es necesario comprar el juego. En PC solo necesitas descargarlo desde alguna de las plataformas nombradas anteriormente.</p>
-                    </article>
-                    <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
-                        <h3>Campaña</h3>
-                        <img src="./assets/imagenes/camp.png" alt="imagen de acceso al modo campaña">
-                        <p>Al comprar el juego obtenemos la posibilidad de jugar la campaña que seria el <em>modo historia</em> de la saga, es de un solo jugador y se va guardando el progreso para continuarlo cuando gustes. Suelen ser muy atrapantes y se recomienda jugarlas porque podemos aprender mucho sobre las funciones y teclas asignadas para cada accion, luego si no las sentimos comodas configurarlo a nuestro gusto.</p>
-                    </article>
-                    <article class="recuadro col-12 col-md-6 col-lg-3"><!--resumen de los distintos formatos de juego-->
-                        <h3>Zombies</h3>
-                        <img src="./assets/imagenes/zom.png" alt="imagen de acceso al modo zombies">
-                        <p>Este es otro modo que se adquiere al comprar el juego, en esta version debemos sobrevivir a hordas de zombies que con cada ronda se va poniendo mas dificil, se puede hacer en grupo o solitario (este puede guardarse), a medida que la partida avanza juntamos esencia y herramientas para mejorar nuestro personaje y armas hasta que decidamos llamar al helicoptero de rescate.</p>
-                    </article>
-                    <article class="recuadro col-12 col-md-6 col-lg-3"> <!--resumen de los distintos formatos de juego-->
-                        <h3>Multijugador</h3>
-                        <img src="./assets/imagenes/multi.png" alt="imagen de acceso al modo multijugador">
-                        <p>A este modo le dedicaremos esta pagina ya que es lo que jugamos. Aqui encontraras partidas normalmente de 6 contra 6 en varios mapas y amplia variedad de modos de juego, algunos mas frenéticos que otros pero todos suelen ser muy competitivos. También podrás editar tu perfil, operador, armamentos y más, ganaras experiencia con cada partida para subir de nivel e ir desbloqueando armas y accesorios que elegiras equipar segun tu estilo de juego.</p>
-                    </article>
+            
+            <div class="container-fluid"> <!--resumen de los distintos formatos de juego-->
+                <div class="row g-2">
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <article class="recuadro">
+                            <h3>Warzone</h3>
+                            <a href="https://www.callofduty.com/es/warzone" target="_blank"><img src="./assets/imagenes/wz.png" class="imgCard" alt="imagen de acceso al modo warzone"></a>
+                            <p>Este modo de juego es <em>GRATUITO</em> y consiste en ser la ultima persona o grupo sobrevivientes en un mapa donde el gas va reduciendo la zona segura, lo cual hace que si o si tengas que moverte y cruzarte con rivales hasta que solo queda 1 persona o equipo. Si bien en Play Station para poder jugarlo necesitas pagar la suscripción a PS Plus no es necesario comprar el juego. En PC solo necesitas descargarlo desde alguna de las plataformas nombradas anteriormente.</p>
+                        </article>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <article class="recuadro">
+                            <h3>Campaña</h3>
+                            <a href="https://www.callofduty.com/es/blackops6/campaign" target="_blank"><img src="./assets/imagenes/camp.png" class="imgCard" alt="imagen de acceso al modo campaña"></a>
+                            <p>Al comprar el juego obtenemos la posibilidad de jugar la campaña que seria el <em>modo historia</em> de la saga, es de un solo jugador y se va guardando el progreso para continuarlo cuando gustes. Suelen ser muy atrapantes y se recomienda jugarlas porque podemos aprender mucho sobre las funciones y teclas asignadas para cada accion, luego si no las sentimos comodas configurarlo a nuestro gusto, tambien suelen dar algun tipo de recompensa al completarlas.</p>
+                        </article>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <article class="recuadro">
+                            <h3>Zombies</h3>
+                            <a href="https://www.callofduty.com/es/blackops6/zombies" target="_blank"><img src="./assets/imagenes/zom.png" class="imgCard" alt="imagen de acceso al modo zombies"></a>
+                            <p>Este es otro modo que se adquiere al comprar el juego, en esta version debemos sobrevivir a hordas de zombies que con cada ronda se va poniendo mas dificil, se puede hacer en grupo o solitario (este puede guardarse), a medida que la partida avanza juntamos esencia y herramientas para mejorar nuestro personaje y armas hasta que decidamos llamar al helicoptero de rescate. Tiene misiones ocultas y al completar todo nos dara una skin.</p>
+                        </article>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <article class="recuadro">
+                            <h3>Multijugador</h3>
+                            <a href="https://www.callofduty.com/es/blackops6/multiplayer" target="_blank"><img src="./assets/imagenes/multi.png" class="imgCard" alt="imagen de acceso al modo multijugador"></a>
+                            <p>A este modo le dedicaremos esta pagina ya que es lo que jugamos. Aqui encontraras partidas normalmente de 6 contra 6 en varios mapas y amplia variedad de modos de juego, algunos mas frenéticos que otros pero todos suelen ser muy competitivos. También podrás editar tu perfil, operador, armamentos y más, ganaras experiencia con cada partida para subir de nivel e ir desbloqueando armas y accesorios que elegiras equipar segun tu estilo de juego.</p>
+                        </article>
+                    </div>
                 </div>
             </div>                           
         </section>
