--- a/pages/armamento.html
+++ b/pages/armamento.html
@@ -16,8 +16,8 @@
     <title>HADIR - Armas</title> <!--nombre pestaña-->
 </head>
 <body>
-    <section id="inicio1"></section>
-    <header><img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR">
+    <header id="inicio1">
+        <img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,9 @@
             <img src="../assets/imagenes/Menu-armas.png" alt="Menu de armamento, rachas o galeria de tiro" class="imgMenuHor">
         </div>
         <p>El armamento está compuesto por el arma principal, el arma secundaria (podemos equipar otra principal usando el comodín "Exceso de medios"), un arma cuerpo a cuerpo, equipamiento táctico, equipamiento letal, mejora de campo y 3 ventajas (pueden ser 4 si equipamos el comodín "Ventaja extra"), si las ventajas son del mismo "color" obtenemos una especialidad. Para entenderlo mejor vamos a dividirlo en 4 partes: <em>armas, equipamiento, ventajas y comodin</em>.</p>
-        <img src="../assets/imagenes/Armamento.png" alt="Menu personalizacion de armamento" class="imgFhd"><!--Imagen del menu de personalizacion de armamento-->
+        <div class="container-fluid text-center">
+            <img src="../assets/imagenes/Armamento.png" alt="Menu personalizacion de armamento" class="imgFhd"><!--Imagen del menu de personalizacion de armamento-->
+        </div>
         <section>
             <article>
                 <h3>Armas</h3>
