--- a/pages/clips.html
+++ b/pages/clips.html
@@ -16,8 +16,8 @@
     <title>HADIR - Clips</title> <!--nombre pestaña-->
 </head>
 <body>
-    <section id="inicio1"></section>
-    <header><img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR">
+    <header id="inicio1">
+        <img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,26 +52,34 @@
     <main>
         <h2>Videos e imagenes</h2>
         <div class="container-fluid">
-            <div class="row">
-                <div class="recuadro col-md-12 col-lg-6">
-                    <h3>Remates</h3>
-                    <p>Sorprendiendo enemigos por la espalda.</p>
-                    <video src="../assets/videos/remates.mp4" controls></video>
+            <div class="row g-2">
+                <div class="col-md-12 col-lg-6">
+                    <div class="recuadro">
+                        <h3>Remates</h3>
+                        <p>Sorprendiendo enemigos por la espalda.</p>
+                        <video src="../assets/videos/remates.mp4" controls></video>
+                    </div>
                 </div>
-                <div class="recuadro col-md-12 col-lg-6">
-                    <h3>Huida tactica</h3>
-                    <p>En el mapa <em>Stakeout</em> hay una forma de escaparte si te acorralan en el pasillo.</p>
-                    <video src="../assets/videos/esc_stake.mp4" controls></video>
+                <div class="col-md-12 col-lg-6">
+                    <div class="recuadro">
+                        <h3>Huida tactica</h3>
+                        <p>En el mapa <em>Stakeout</em> hay una forma de escaparte si te acorralan en el pasillo.</p>
+                        <video src="../assets/videos/esc_stake.mp4" controls></video>
+                    </div>
                 </div>
-                <div class="recuadro col-md-12 col-lg-6">
-                    <h3>Un bailecito</h3>
-                    <p>Al finalizar la partida se muestra el top 3 del equipo ganador y se pueden hacer gestos.</p>
-                    <video src="../assets/videos/Baile-Termi-Fer-Toy.mp4" controls></video>
+                <div class="col-md-12 col-lg-6">
+                    <div class="recuadro">
+                        <h3>Un bailecito</h3>
+                        <p>Al finalizar la partida se muestra el top 3 del equipo ganador y se pueden hacer gestos.</p>
+                        <video src="../assets/videos/Baile-Termi-Fer-Toy.mp4" controls></video>
+                    </div>
                 </div>
-                <div class="recuadro col-md-12 col-lg-6">
-                    <h3>Un resumen gracioso de Warzone</h3>
-                    <p>Video viejo pero muy explicativo.</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/hMo2dWhWZpA?si=_sE5yWNd4ekiXFnL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="col-md-12 col-lg-6">
+                    <div class="recuadro">
+                        <h3>Un resumen gracioso de Warzone</h3>
+                        <p>Video viejo pero muy explicativo.</p>
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hMo2dWhWZpA?si=_sE5yWNd4ekiXFnL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
