--- a/pages/menu_p.html
+++ b/pages/menu_p.html
@@ -16,8 +16,8 @@
     <title>HADIR - Pre partida</title> <!--nombre pestaña-->
 </head>
 <body>
-    <section id="inicio1"></section>
-    <header><img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR">
+    <header  id="inicio1">
+        <img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,7 +75,9 @@
                 <a href="#buscar">Buscar partida</a>
             </li>
         </ol>
-        <img src="../assets/imagenes/Pre_partida.png" alt="Menu Pre Partida multijugador" class="imgFhd"> <!--clase para imagen 1080p-->
+        <div class="container-fluid text-center">
+                <img src="../assets/imagenes/Pre_partida.png" alt="Menu Pre Partida multijugador" class="imgFhd"> <!--clase para imagen 1080p-->
+        </div>
     </main>
     <div>
         <section id="perfil">
