--- a/pages/modos.html
+++ b/pages/modos.html
@@ -16,8 +16,8 @@
     <title>HADIR - Modos</title> <!--nombre pestaña-->
 </head>
 <body>
-    <section id="inicio1"></section>
-    <header><img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR">
+    <header id="inicio1">
+        <img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo del clan HADIR">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,7 @@
     <main>
         <h2>Selección de modo</h2>
         <p>En el formato multijugador tenemos varios modos diferentes normalmente de 6 vs 6 y con reaparicion, los <em>destacados</em> suelen ser eventos rotativos, pero tambien podemos filtrar las partidas segun nos interesa a nosotros eligiendo el modo que mas nos gusta sea partida normal o extremo.</p>
-        <p>Cada partida tiene dos formas de finalizar, una es cumpliendo el objetivo que puede ser por eliminaciones, puntos o rondas y si se termina el tiempo gana quien este mas cerca de cumplirlo.</p>
+        <p>Cada partida tiene dos formas de finalizar, una es cumpliendo el objetivo que puede ser por eliminaciones, puntos o rondas y la otra es si se termina el tiempo, que gana quien este mas cerca de cumplir el objetivo.</p>
         <p>En el modo <em>Extremo</em> hay fuego aliado, penalizacion y no vemos los indicadores de balas o granadas restantes ni mejoras de campo o rachas, solo nos mostrara un punto en su lugar. ¿Que significa fuego aliado? que las balas, granadas y rachas de baja tambien impactan a nuestros compañeros, asi que deberemos tener mucho cuidado al momento de atacar ya que despeus de eliminar a un par el juego nos penaliza y en lugar de morir ellos nos elimina a nosotros. Esto lo hacen para que no haya trolls matando amigos todo el tiempo y se pueda jugar la partida.</p>
         <h3>Lista de partidas</h3>
         <p>La lista de partidas que podemos seleccionar es la siguiente y les indicaremos como se juega cada modo:</p>
