--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,8 +16,8 @@
     <title>HADIR - Contacto</title> <!--nombre pestaña-->
 </head>
 <body>
-    <section id="inicio1"></section>
-    <header><img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo HADIR">
+    <header id="inicio1">
+        <img src="../assets/imagenes/Logo_HADIR2.png" alt="Logo HADIR">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
