correcion en imagen inicio y un clip

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </nav>
         <h1>Inicio</h1> <!--Titulo derecha-->        
     </header>
-    <div>
+    <div class="container-fluid">
         <img src="./assets/imagenes/Logo_COD.jpeg" class="logoCod animate__animated animate__fadeIn" alt="Logo Call Of Duty y operador con remera del clan HADIR"> <!--imagen presentacion-->
     </div>
     <main>
