--- a/pages/clips.html
+++ b/pages/clips.html
@@ -56,7 +56,7 @@
                 <div class="col-md-12 col-lg-6">
                     <div class="recuadro">
                         <h3>Remates</h3>
-                        <p>Sorprendiendo enemigos por la espalda.</p>
+                        <p>Sorprendiendo enemigos por la espalda para hacerles un remate.</p>
                         <video src="../assets/videos/remates.mp4" controls></video>
                     </div>
                 </div>
