Se centra pagina menu_p y otros detalles minimos

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </nav>
         <h1>Inicio</h1> <!--Titulo derecha-->        
     </header>
-    <div class="container-fluid">
+    <div class="container-fluid p-0">
         <img src="./assets/imagenes/Logo_COD.jpeg" class="logoCod animate__animated animate__fadeIn" alt="Logo Call Of Duty y operador con remera del clan HADIR"> <!--imagen presentacion-->
     </div>
     <main>
@@ -63,7 +63,7 @@
                         <p>Hace varios años que compartimos tardes y noches de juego siempre que podemos, por lo cual nuestro "TAG" es conocido por muchos otros jugadores y clanes a los cuales enfrentamos en las diferentes partidas. Hemos jugado Call Of Duty:MW (2019) / Warzone, COD:MW2 / Warzone 2, COD: MW3 y ahora COD: Black Ops 6 que es el juego al que le vamos a dedicar esta pagina.</p>
                         <p>Hay varias cosas que nos caracterizan, pero lo mas importante es la calidad de personas que conforman el grupo, la mayoria somos de Argentina, pero tambien hay amigos de Perú, Uruguay y Chile. Algunos nos conocemos personalmente y con otros aun tenemos eso pendiente. Como dice Nach en una de sus canciones "No mido mi exito por logros sino por valores, por eso estoy con los buenos, no con los mejores". Aqui no vas a encontrar a los jugadores "Top" del juego, pero te aseguramos que vas a disfrutar, divertirte, ganar alguna que otra partida y aprender al igual que nosotros. Sin mas que añadir te invitamos a descargar y probar tus habilidades, saludos.</p>
                     </div>
-                    <div class="col-12 col-lg-5 col-xl-4">
+                    <div class="col-12 col-lg-5 col-xl-4 text-center">
                             <img src="./assets/imagenes/NuevoLogoHadir.jpeg" class="imgMenuHor" data-aos="fade-up" alt="Nuevo logo del clan HADIR, Call Of Duty, calavera, Hadir">
                     </div>
                     <div class="col-12 col-lg-12 col-xl-4">
@@ -78,10 +78,9 @@
                 </div>
             </div>
         </section>
-        <section id="elJuego"><!--Info sobre COD-->
-            
-            <div class="container-fluid"> <!--resumen de los distintos formatos de juego-->
-                <div class="row g-2">
+        <section id="elJuego"> <!--resumen de los distintos formatos de juego--> 
+            <div class="container-fluid">
+                <div class="row g-2 mt-2">
                     <div class="col-12 col-md-6 col-lg-3">
                         <article class="recuadro">
                             <h3>Warzone</h3>
