--- a/pages/armamento.html
+++ b/pages/armamento.html
@@ -49,7 +49,7 @@
         </nav>
         <h1>Armamento</h1> <!--Titulo-->
     </header>
-    <main>
+    <main class="mx-2">
         <h2>Armamentos</h2>
         <p>En el menu de Armas podemos configurar nuestro armamento, seleccionar las rachas de baja y probar el arma configurada en la galeria de tiro</p>
         <div id="armas">
