--- a/pages/modos.html
+++ b/pages/modos.html
@@ -49,7 +49,7 @@
         </nav>
         <h1>Modos</h1><!--Titulo-->
     </header>
-    <main>
+    <main class="mx-2">
         <h2>Selección de modo</h2>
         <p>En el formato multijugador tenemos varios modos diferentes normalmente de 6 vs 6 y con reaparicion, los <em>destacados</em> suelen ser eventos rotativos, pero tambien podemos filtrar las partidas segun nos interesa a nosotros eligiendo el modo que mas nos gusta sea partida normal o extremo.</p>
         <p>Cada partida tiene dos formas de finalizar, una es cumpliendo el objetivo que puede ser por eliminaciones, puntos o rondas y la otra es si se termina el tiempo, que gana quien este mas cerca de cumplir el objetivo.</p>
