--- a/pages/menu_p.html
+++ b/pages/menu_p.html
@@ -58,7 +58,7 @@
             <li>A la derecha los amigos conectados.</li>
             <li>En las pestañas superiores tenemos operadores, eventos, pase de batalla, barracones y tienda.</li>
             <li>Abajo a la izquierda el informe pospartida para revisar las estadisticas de la ultima partida jugada.</li>
-            <li>Y abajo a la derecha podremos activar las fichas de doble puntos de experiencia.</li>
+            <li>Y abajo a la derecha podremos activar las fichas de doble puntos de experiencia para subir mas rapido el nivel de armas, prestigio o pase de batalla.</li>
         </ul>
         <p>Pero vamos a centrarnos en:</p>
         <ol>
@@ -82,26 +82,28 @@
     <div>
         <section id="perfil">
             <img src="../assets/imagenes/Perfil.png" alt="Menú perfil de jugador" class="imgMenuVert" data-aos="flip-left"> <!--clase para imagen de menu vertical-->
-            <div>
+            <div class="col-5">
                 <h3>Perfil</h3>
                 <p>Aquí vemos nuestro nivel, prestigio, CP (monedas del juego), ID por si alguien quiere agregarnos de amigo, el emblema y la tarjeta de visita que se muestran cuando eliminamos a alguien o salimos en la <em>jugada destacada</em>. Más abajo podremos editar estos y otros detalles como elegir el operador que se muestra, el arma que tiene en mano o agregar una insignia de clan entre otras cosas.</p>
             </div>
         </section>
         <section id="ajustes">
             <img src="../assets/imagenes/Ajustes.png" alt="Menú ajustes de configuracion" class="imgMenuVert" data-aos="flip-left">
-            <div>
+            <div class="col-5">
                 <h3>Ajustes</h3>
                 <p>Las opicones de este menú son muy variadas y puntuales, por lo que te permite agregar 15 ajustes rápidos para no tener que buscar tanto si queres cambiar algo en medio de una partida, por ejemplo, tener a mano el ajuste de "microfono abierto u oprimir para hablar" o la sensibilidad del mouse. Podremos configurar las teclas, graficos, sonidos, interfaz de juego, etc... Lo principal que recomendamos es tener activado el chat de voz para poder escuchar y hablar con otras personas y poner el <strong>FOV</strong> a 120 para que se sienta mas fluido, ya que el resto de ajustes dependera de tus gustos, comodidad y los recursos que dispongas ya sea en tu consola o PC.</p>
             </div>
         </section>
         <section id="armas">
             <img src="../assets/imagenes/Menu-armas.png" alt="Menu de armamento, rachas o galeria de tiro" class="imgMenuHor" data-aos="flip-down"> <!--clase para imagen de menu horizontal-->
-            <h3>Armas</h3>
-            <p>En este menu podremos configurar hasta 10 opciones de <a href="./armamento.html">armamento</a> para seleccionar el que queremos de forma rapida dentro de la partida,  sin perder el tiempo cambiando cosas mientras estamos en el campo de batalla, podremos elegir las <em>rachas de puntos</em> y probar las armas en la <em>galeria de tiro</em>.</p>
-            </section>
+            <div class="col-8">
+                <h3>Armas</h3>
+                <p>En este menu podremos configurar hasta 10 opciones de <a href="./armamento.html">armamento</a> para seleccionar el que queremos de forma rapida dentro de la partida,  sin perder el tiempo cambiando cosas mientras estamos en el campo de batalla, podremos elegir las <em>rachas de puntos</em> y probar las armas en la <em>galeria de tiro</em>.</p>
+            </div>
+        </section>
         <section id="buscar">
             <img src="../assets/imagenes/Buscar-Partida.png" alt="Menú buscar partida" class="imgMenuVert" data-aos="flip-left">
-            <div>
+            <div class="col-5">
                 <h3>Buscar partida</h3>
                 <p>Hay muchos modos de juego, variedad de mapas, podremos crear partidas privadas, también suele haber eventos temporales con modos distintos e innovadores que nos daran algun tipo de recompensa al completarlos, por ejemplo, en esta imagen hay un evento de "El juego del calamar" que sacaran al finalizar la temporada para poner algo nuevo.</p>
             </div>
